--- a/01_introduccion.ipynb
+++ b/01_introduccion.ipynb
@@ -7,7 +7,7 @@
     "# Introducción al machine learning con Python\n",
     "---\n",
     "\n",
-    "Vamos a ver las herramientas básicas que usaremos durante este curso.\n"
+    "Definiremos el marco tecnológico con el que trabajaremos durante el curso"
    ]
   },
   {
@@ -64,10 +64,10 @@
    "source": [
     "## Librerias necesarias\n",
     "\n",
-    "* Numpy:  *the fundamental package for scientific computing with Python.* Gestión y operaciones con matrices.\n",
-    "* Matplotlib: Visualización.\n",
-    "* Sci-kit learn: Kit científico.\n",
-    "* Pandas: Python Data Analysis Library."
+    "* [Numpy](https://numpy.org/):  *the fundamental package for scientific computing with Python. An efficient multi-dimensional container of generic data.* \n",
+    "* [Matplotlib](https://matplotlib.org/): *a Python 2D plotting library*.\n",
+    "* [Sci-kit learn](https://scikit-learn.org/stable/): *Machine Learning in Python.*\n",
+    "* [Pandas](https://pandas.pydata.org/): *Python Data Analysis Library.*"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "source": [
     "## Sci-kit learn\n",
     "\n",
-    "<img src='img/sklearn.png' width=400>\n",
+    "<img src='https://scikit-learn.org/stable/_static/scikit-learn-logo-small.png' width=220>\n",
     "\n",
     "Sklearn es la librería de facto para construir modelos de ML en Python. Poseé una arquitectura intuitiva y generalizada a todos los tipos de modelos. Además, incluye una serie de herramientas que nos ayudarán no solo a entrenar y ejecutar modelos, si no también a seleccionarlos, trabajar las variables, y evaluar la eficiencia de nuestros sistemas de ML.\n",
     "\n",
@@ -87,9 +87,7 @@
     "* *Simple and efficient tools for data mining and data analysis.*\n",
     "* *Accessible to everybody, and reusable in various contexts.*\n",
     "* *Built on NumPy, SciPy, and Matplotlib.*\n",
-    "\n",
-    "\n",
-    "[Documentación](https://scikit-learn.org/stable/)"
+    "\n"
    ]
   }
  ],
@@ -109,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
