preparacio segona classe

--- a/03_limpieza.ipynb
+++ b/03_limpieza.ipynb
@@ -1491,6 +1491,16 @@
     "\n",
     "Podría implicar realizar alguna corrección manual."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lecturas\n",
+    "\n",
+    "* [Medium](https://towardsdatascience.com/the-ultimate-guide-to-data-cleaning-3969843991d4)\n",
+    "* [Data cleaning](https://elitedatascience.com/data-cleaning)"
+   ]
   }
  ],
  "metadata": {
@@ -1509,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
