--- a/02_datos.ipynb
+++ b/02_datos.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,28 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (0.25.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from pandas) (2019.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from pandas) (1.16.4)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas"
    ]
   },
   {
@@ -52,16 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names'])"
+       "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names', 'filename'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4)\n",
+      "(150,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exploración del conjunto de datos\n"
+    "# Exploración del conjunto de datos\n",
+    "print(data.data.shape)\n",
+    "print(data.target.shape)"
    ]
   },
   {
@@ -97,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (2.22.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from requests) (2.8)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from requests) (1.25.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gabri\\anaconda3\\envs\\madm2019\\lib\\site-packages (from requests) (2019.6.16)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +301,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>aardvark</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -270,7 +322,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>antelope</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -291,7 +343,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>bass</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -312,7 +364,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>bear</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -333,7 +385,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>boar</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -353,111 +405,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>buffalo</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>calf</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>carp</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>catfish</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>cavy</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -469,11 +416,6 @@
        "2        bass     0         0     1     0         0        1         1   \n",
        "3        bear     1         0     0     1         0        0         1   \n",
        "4        boar     1         0     0     1         0        0         1   \n",
-       "5     buffalo     1         0     0     1         0        0         0   \n",
-       "6        calf     1         0     0     1         0        0         0   \n",
-       "7        carp     0         0     1     0         0        1         0   \n",
-       "8     catfish     0         0     1     0         0        1         1   \n",
-       "9        cavy     1         0     0     1         0        0         0   \n",
        "\n",
        "   toothed  backbone  breathes  venomous  fins  legs  tail  domestic  catsize  \\\n",
        "0        1         1         1         0     0     4     0         0        1   \n",
@@ -481,26 +423,16 @@
        "2        1         1         0         0     1     0     1         0        0   \n",
        "3        1         1         1         0     0     4     0         0        1   \n",
        "4        1         1         1         0     0     4     1         0        1   \n",
-       "5        1         1         1         0     0     4     1         0        1   \n",
-       "6        1         1         1         0     0     4     1         1        1   \n",
-       "7        1         1         0         0     1     0     1         1        0   \n",
-       "8        1         1         0         0     1     0     1         0        0   \n",
-       "9        1         1         1         0     0     4     0         1        0   \n",
        "\n",
        "   type  \n",
        "0     1  \n",
        "1     1  \n",
        "2     4  \n",
        "3     1  \n",
-       "4     1  \n",
-       "5     1  \n",
-       "6     1  \n",
-       "7     4  \n",
-       "8     4  \n",
-       "9     1  "
+       "4     1  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +441,7 @@
     "# Leemos los datos que se encuentran en formato csv y lo cargamos en un dataframe\n",
     "df = pd.read_csv(url_data, header=None)\n",
     "df.columns = [\"animal_name\", \"hair\", \"feathers\",\"eggs\",\"milk\",\"airborne\",\"aquatic\",\"predator\",\"toothed\",\"backbone\",\"breathes\",\"venomous\",\"fins\",\"legs\",\"tail\",\"domestic\",\"catsize\",\"type\"]\n",
-    "df.head(10)"
+    "df.head()"
    ]
   },
   {
@@ -523,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -552,111 +484,111 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>11</td>\n",
        "      <td>chicken</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <td>16</td>\n",
        "      <td>crow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <td>20</td>\n",
        "      <td>dove</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <td>21</td>\n",
        "      <td>duck</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <td>23</td>\n",
        "      <td>flamingo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <td>27</td>\n",
        "      <td>fruitbat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <td>29</td>\n",
        "      <td>girl</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
+       "      <td>32</td>\n",
        "      <td>gorilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
+       "      <td>33</td>\n",
        "      <td>gull</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <td>37</td>\n",
        "      <td>hawk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
+       "      <td>41</td>\n",
        "      <td>kiwi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <td>43</td>\n",
        "      <td>lark</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <td>56</td>\n",
        "      <td>ostrich</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
+       "      <td>57</td>\n",
        "      <td>parakeet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
+       "      <td>58</td>\n",
        "      <td>penguin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
+       "      <td>59</td>\n",
        "      <td>pheasant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <td>71</td>\n",
        "      <td>rhea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
+       "      <td>75</td>\n",
        "      <td>sealion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
+       "      <td>78</td>\n",
        "      <td>skimmer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <td>79</td>\n",
        "      <td>skua</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
+       "      <td>83</td>\n",
        "      <td>sparrow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
+       "      <td>84</td>\n",
        "      <td>squirrel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
+       "      <td>87</td>\n",
        "      <td>swan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <td>93</td>\n",
        "      <td>vampire</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
+       "      <td>95</td>\n",
        "      <td>vulture</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
+       "      <td>96</td>\n",
        "      <td>wallaby</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <td>100</td>\n",
        "      <td>wren</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -694,7 +626,7 @@
        "100        wren"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,19 +940,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'fetch_openml' from 'sklearn.datasets' (/home/biel/anaconda3/envs/fava/lib/python3.7/site-packages/sklearn/datasets/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-179acf296f2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Vamos a cargar un dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfetch_openml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcredit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfetch_openml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'credit-g'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'fetch_openml' from 'sklearn.datasets' (/home/biel/anaconda3/envs/fava/lib/python3.7/site-packages/sklearn/datasets/__init__.py)"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'details', 'categories', 'url'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1070,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
