--- a/04_Selección_de_caracteristicas.ipynb
+++ b/04_Selección_de_caracteristicas.ipynb
@@ -301,6 +301,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# Creamos un dataframe\n",
+    "#viz = pd.DataFrame(data.data)\n",
+    "#viz.columns = data.feature_names\n",
+    "#viz[\"species\"] = data.target\n",
+    "\n",
+    "viz = sns.load_dataset(\"iris\")\n",
+    "\n",
+    "g = sns.pairplot(viz, hue=\"species\", markers=[\"o\", \"s\", \"D\"]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'PCA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-435518bebb55>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpca\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mpca\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mX_r\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'PCA' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pca = PCA(n_components=2)\n",
+    "pca.fit(X)\n",
+    "X_r = pca.transform(X)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "\n",
+    "colors = ['skyblue', 'mediumseagreen', 'darkorange']\n",
+    "\n",
+    "for color, i, target_name in zip(colors, [0, 1, 2], target_names):\n",
+    "    plt.scatter(X_r[y == i, 0], X_r[y == i, 1], color=color, alpha=.8, \n",
+    "                label=target_name)\n",
+    "plt.legend(loc='best')\n",
+    "plt.title(' PCA 2  dimensiones');\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpretacion geometrica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "\n",
+    "colors = ['skyblue', 'mediumseagreen', 'darkorange']\n",
+    "\n",
+    "for color, i, target_name in zip(colors, [0, 1, 2], target_names):\n",
+    "    plt.scatter(X[y == i, 0], X[y == i, 1], color=color, alpha=.8, \n",
+    "                label=target_name)\n",
+    "\n",
+    "plt.plot([pca.mean_[0], pca.mean_[0] + (pca.explained_variance_[0]*pca.components_[0][0])],[pca.mean_[1], pca.mean_[1] + (np.sqrt(pca.explained_variance_[0])*pca.components_[0][1])],'-',c='r')    \n",
+    "plt.plot([pca.mean_[0], pca.mean_[0] + (pca.explained_variance_[1]*pca.components_[1][0])],[pca.mean_[1], pca.mean_[1] + (np.sqrt(pca.explained_variance_[1])*pca.components_[1][1])],'-', c='r')    \n",
+    "\n",
+    "plt.legend(loc='best')\n",
+    "plt.title(' Plot primera vs segunda dimensión');\n",
+    "print(pca.mean_[0], pca.mean_[1]);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "\n",
+    "colors = ['skyblue', 'mediumseagreen', 'darkorange']\n",
+    "\n",
+    "for color, i, target_name in zip(colors, [0, 1, 2], target_names):\n",
+    "    plt.scatter(X[y == i, 1], X[y == i, 3], color=color, alpha=.8, \n",
+    "                label=target_name)\n",
+    "\n",
+    "plt.plot([pca.mean_[1], pca.mean_[1] + (np.sqrt(pca.explained_variance_[0])*pca.components_[0][1])],[pca.mean_[3], pca.mean_[3] + (pca.explained_variance_[0]*pca.components_[0][3])],'-',c='r')    \n",
+    "plt.plot([pca.mean_[1], pca.mean_[1] + (np.sqrt(pca.explained_variance_[1])*pca.components_[1][1])],[pca.mean_[3], pca.mean_[3] + (pca.explained_variance_[1]*pca.components_[1][3])],'-', c='r')    \n",
+    "\n",
+    "plt.legend(loc='best')\n",
+    "plt.title(' Plot segunda vs cuarta dimensión');"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
