ultimo commit antes de clase

--- a/04_Selección_de_caracteristicas.ipynb
+++ b/04_Selección_de_caracteristicas.ipynb
@@ -921,6 +921,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ejercicio:\n",
+    "\n",
+    "En el ejemplo de Scikit de regresión lineal usan un conjunto de datos de la enfermedad de la diabetes. Para poder realizar una visualización solamente usan la primera característica para la regresión.\n",
+    "\n",
+    "Se os pide que realizeis un estudio de las características y comprobeis si podeis mejorar los resultados del tutorial.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Lecturas adicionales\n",
     "\n",
     "* [Recursive feature elimination with cross-validation](https://scikit-learn.org/stable/auto_examples/feature_selection/plot_rfe_with_cross_validation.html#sphx-glr-auto-examples-feature-selection-plot-rfe-with-cross-validation-py)\n",
