--- a/06_Logistic_regression.ipynb
+++ b/06_Logistic_regression.ipynb
@@ -8,8 +8,7 @@
     "---\n",
     "\n",
     "* Regresión logística\n",
-    "* Selección de características\n",
-    "* Reducción usando PCA\n"
+    "* Selección de características"
    ]
   },
   {
@@ -514,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio : Repite el mismo proceso cambiando el parametro C y compara los resultados"
+    "### Ejercicio : Repite el mismo proceso cambiando el parametro C de la regresión y compara los resultados"
    ]
   },
   {
@@ -543,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
