--- a/04_Selección_de_caracteristicas.ipynb
+++ b/04_Selección_de_caracteristicas.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>229</th>\n",
+       "      <td>229</td>\n",
        "      <td>0.44178</td>\n",
        "      <td>0.0</td>\n",
        "      <td>6.20</td>\n",
@@ -671,7 +671,7 @@
        "      <td>3.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>296</th>\n",
+       "      <td>296</td>\n",
        "      <td>0.05372</td>\n",
        "      <td>0.0</td>\n",
        "      <td>13.92</td>\n",
@@ -687,7 +687,7 @@
        "      <td>7.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>425</th>\n",
+       "      <td>425</td>\n",
        "      <td>15.86030</td>\n",
        "      <td>0.0</td>\n",
        "      <td>18.10</td>\n",
@@ -703,7 +703,7 @@
        "      <td>24.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>491</th>\n",
+       "      <td>491</td>\n",
        "      <td>0.10574</td>\n",
        "      <td>0.0</td>\n",
        "      <td>27.74</td>\n",
@@ -719,7 +719,7 @@
        "      <td>18.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>418</th>\n",
+       "      <td>418</td>\n",
        "      <td>73.53410</td>\n",
        "      <td>0.0</td>\n",
        "      <td>18.10</td>\n",
@@ -754,7 +754,7 @@
        "418     20.2   16.45  20.62  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -786,10 +786,8 @@
       "Fitting estimator with 10 features.\n",
       "Fitting estimator with 9 features.\n",
       "Fitting estimator with 8 features.\n",
-      "Fitting estimator with 7 features.\n",
-      "Fitting estimator with 6 features.\n",
       "-------------------------------\n",
-      "Index(['CHAS', 'NOX', 'RM', 'DIS', 'PTRATIO'], dtype='object')\n"
+      "Index(['CHAS', 'NOX', 'RM', 'DIS', 'RAD', 'PTRATIO', 'LSTAT'], dtype='object')\n"
      ]
     }
    ],
@@ -798,7 +796,7 @@
     "\n",
     "# Create the RFE object and rank each pixel\n",
     "r = linear_model.LinearRegression()\n",
-    "rfe = RFE(estimator=r, n_features_to_select=5, step=1, verbose=1)\n",
+    "rfe = RFE(estimator=r, n_features_to_select=7, step=1, verbose=1)\n",
     "rfe.fit(X, Y)\n",
     "\n",
     "\n",
@@ -811,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +817,7 @@
      "output_type": "stream",
      "text": [
       "Optimum number of features: 12\n",
-      "Score with 12 features: 0.687850\n"
+      "Score with 12 features: 0.687341\n"
      ]
     }
    ],
@@ -850,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -859,9 +857,7 @@
      "text": [
       "Fitting estimator with 13 features.\n",
       "-------------------------------\n",
-      "Index(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'DIS', 'RAD', 'TAX',\n",
-      "       'PTRATIO', 'B', 'LSTAT'],\n",
-      "      dtype='object')\n"
+      "Index(['AGE'], dtype='object')\n"
      ]
     }
    ],
@@ -873,7 +869,7 @@
     "\n",
     "\n",
     "temp = pd.Series(rfe.support_,index = X.columns)\n",
-    "selected_features_rfe = temp[temp==True].index\n",
+    "selected_features_rfe = temp[temp!=True].index\n",
     "print(\"-------------------------------\")\n",
     "print(selected_features_rfe)"
    ]
