--- a/08_Spam_or_ham.ipynb
+++ b/08_Spam_or_ham.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5572, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dataset from - https://archive.ics.uci.edu/ml/datasets/SMS+Spam+Collection\n",
     "df = pd.read_table('data/SMSSpamCollection',\n",
     "                   sep='\\t',\n",
     "                   header=None,\n",
-    "                   names=['label', 'sms_message'])"
+    "                   names=['label', 'sms_message'])\n"
    ]
   },
   {
